# spc

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
examples/: franka_push.py  g1_navigation.py  g1_pass.py  g1_pass_augmented.py  g1_soccer.py  g1_soccer_augmented.py  k1_navigation.py  k1_pass.py  k1_pass_augmented.py  particle.py  profile.py  profile_g1.py  profile_g1_soccer.py  run_franka_push.py  run_g1_navigation.py  run_g1_soccer.py  run_g1_soccer_augmented.py  run_particle.py  run_t1_soccer.py  run_t1_soccer_augmented.py  t1_navigation.py  t1_pass.py  t1_pass_augmented.py  t1_shoot.py  t1_shoot_augmented.py  t1_soccer.py  t1_soccer_augmented.py  utils.py  video.py
include/spc/algs/: cem.h  optimizer.h
include/spc/core/: mlp_policy.h  onnx_policy.h  policy.h  task.h  task_factory.h
include/spc/tasks/: franka_push.h  g1_navigation.h  g1_soccer.h  g1_soccer_augmented.h  humanoid_augmented.h  humanoid_navigation.h  humanoid_pass.h  humanoid_shoot.h  humanoid_soccer.h  humanoid_soccer_augmented.h  particle.h  t1_navigation.h  t1_soccer.h  t1_soccer_augmented.h
include/spc/utils/: spline.h
models/franka_push/: scene.xml  scene_panda_robotiq_cube_constrained.xml  scene_panda_robotiq_cube_obstacle.xml  scene_panda_robotiq_square.xml  scene_panda_robotiq_square_constrained.xml  scene_panda_robotiq_tblock.xml
models/g1/: g1.xml  scene_navigation.xml  scene_soccer.xml
models/k1/: k1.xml  scene_navigation.xml  scene_soccer.xml
models/t1/: scene_navigation.xml  scene_shoot.xml  scene_soccer.xml  t1.xml
policies/: franka_push.mlp  franka_push.onnx  g1_navigation.mlp  g1_navigation.onnx  k1_navigation.onnx
src/algs/: cem.cc  optimizer.cc
src/bindings/: pybind.cc
src/core/: mlp_policy.cc  onnx_policy.cc  task_factory.cc
src/tasks/: franka_push.cc  g1_navigation.cc  g1_soccer.cc  g1_soccer_augmented.cc  g1_tasks.cc  humanoid_navigation.cc  humanoid_pass.cc  humanoid_shoot.cc  humanoid_soccer.cc  humanoid_soccer_augmented.cc  k1_tasks.cc  particle.cc  t1_navigation.cc  t1_soccer.cc  t1_soccer_augmented.cc  t1_tasks.cc
src/utils/: spline.cc
tests/: bench_mj_step.cc  test_cem.cc  test_franka_push_alignment.py  test_mlp_policy.cc  test_onnx.cc  test_particle.cc  test_spline.cc  test_task_factory.cc
