[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "spc_py"
version = "0.1.0"
description = "Sampling-based Predictive Control Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mujoco",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "clang-format"
]

[tool.scikit-build]
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
